2025-09-11 (12.31)
	ANDROID: Implemented support for editing with the system keypad

2025-08-31 (12.30)
	ANDROID: Implemented a replacement editor keypad
	ANDROID: Implemented editor find command
	ANDROID: Updated editor help

2025-04-26 (12.29)
	ANDROID: minor fix for PEN(3)

2025-04-19 (12.29)
	ANDROID: experimental bluetooth support
	ANDROID: update SOUND implementation to avoid skips
	ANDROID: update USB api to allow setting baud rate and timeout
	ANDROID: allow android.speak to take additional non-string args

2025-02-18 (12.28)
	ANDROID: added experimental usb communication support

2025-02-02 (12.28)
	TEENSY: added experimental runtime platform for teensy mcu

2025-01-27 (12.28)
	ANDROID: Updated app icon, thanks to bplus, j7m, round157, qube, baggey
	Final design by j7m

2024-10-09 (12.28)
	COMMON: Fix #232: TICKS stops working after 50 days
	ANDROID: Fix delay accuracy
	ANDROID: Fix location regression

2024-10-06 (12.28)
	ANDROID: Fix web UI regression

2024-09-27 (12.28)
	ANDROID: Fix issue with playing an audio file on android #231

2024-04-14 (12.27)
	COMMON: Fix bug #149: Problem with big hex numbers in windows
	COMMON: Add new function TRANSPOSE()

2024-04-07 (12.27)
	ANDROID: Implemented "android.request"

2024-02-19 (12.27)
	COMMON: Fix TSAVE bug #205

2024-01-22 (12.27)
	COMMON: Fix linking issue on MSYS2

2024-01-14 (12.27)
	COMMON: Improvements for image.save()

2024-01-13 (12.27)
	COMMON: Serial port improvements.

2024-01-06 (12.27)
	COMMON: Allow modules to return objects with methods that take arguments

2023-12-01 (12.27)
	CONSOLE: Bugfix for image.clip() and image.save()

2023-10-31 (12.27)
	COMMON: Fix: RTRIM changes input string

2023-08-27 (12.27)
	COMMON: Fix parameter number error when calling a unit sub/func
	COMMON: Show a runtime error if a module calls exit()

2023-08-05 (12.27)
	COMMON: Fix building on Cygwin

2023-07-23 (12.27)
	COMMON: Fix for RoundPrecisionBug

2023-07-18 (12.27)
	COMMON: Fix redim regression
