@@ -36,7 +36,7 @@ body {
 }
 
 .main-content {
-  height: calc(100vh - 88px);
+  height: calc(100vh - 8em);
   width: 100%;
   overflow: auto;
 }
