@@ -1,3 +1,6 @@
+2025-10-14 (12.32)
+	ANDROID: replace react/mui based portal with native javascript solution
+
 2025-09-11 (12.31)
 	ANDROID: Implemented support for editing with the system keypad
 
